# NeuroEpiAgent

./: .claude_resources.json  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PHASE2_ACCEPTANCE.md  PHASE_A_REPAIRS.md  README.md  SECURITY.md  compute_hash.bat  compute_hash.py  constraints.txt  eval_summary.md  freeze_benchmark.py  get_hash.py  pyproject.toml  run_phase_a_tests.py  test_plan.yaml  validate_draft.py  verify_task_assertions.py  verify_tests.py
.github/workflows/: tests.yml
benchmarks/: BENCHMARK_CARD.md  FREEZING_SUMMARY.md  GOLD_STANDARD_PROCESS.md  README.md  benchmark_schema.v1.json  generate_sha256_sidecar.py  generate_sidecar.py  tasks.draft.yaml  tasks.example.yaml  tasks.v0.1.0.sha256  tasks.v0.1.0.yaml  tasks.v0.2.0-draft.yaml  verify_benchmark_integrity.py
benchmarks/fixtures/: example_arm_outputs.json  test_arm_outputs.json  test_fixtures.json
case_studies/: README.md
case_studies/nhanes_stroke_2017_2018/: provenance.json  report.md  results.json
config/: databases.yaml
config/prompts/: baseline_v1.txt  planner_v1.txt
config/variables/: nhanes_demo.yaml  seer_demo.yaml
docs/: ANALYSIS_IMPLEMENTATION_PRINCIPLES.md  CODE_AVAILABILITY.md  DATA_AVAILABILITY.md  DATA_GOVERNANCE.md  DATA_PROVENANCE.md  EVALUATION_PROTOCOL.md  FINAL_REPORT.md  HISS_SPECIAL_ISSUE_REVISION_PLAN.md  IMPLEMENTATION_REPORT_PHASE_A.md  MANUSCRIPT_PLAN.md  PHASE_A_COMPLETION_SUMMARY.md  PREREGISTERED_ANALYSIS_PLAN.md  PROJECT_CHARTER.md  PUBLICATION_READINESS.md  REPOSITORY_RELEASE_CHECKLIST.md  ROADMAP.md  SEER_DATA_DICTIONARY.md  SEER_STUDY_CONTRACT.md  V0.3.1_ACCEPTANCE_REPORT.md  analysis_plan_schema.v1.json
experiments/pilot_glm47_dev/: arm_outputs.json  checkpoint.json  evaluation.json  evaluation.md
experiments/pilot_glm47_dev_failed_prompt/: arm_outputs.json  checkpoint.json
manuscript/: CLAIM_EVIDENCE_MATRIX.md  NeuroSurgEpiAgent_development_pilot.md  REFERENCE_AUDIT.md  RESEARCH_CONTRACTS.md
scripts/: build_paper_figures.py  inspect_seer_exports.py  scan_tracked_secrets.py
tests/: conftest.py  test_ablation.py  test_adapter_registry.py  test_adjudication.py  test_benchmark_integrity.py  test_capability_consistency.py  test_cdc_wonder_adapter.py  test_cdc_wonder_synthetic_demo.py  test_cli.py  test_database_adapters.py  test_evaluation.py  test_experiment.py  test_guardrails.py  test_inspect_seer_script.py  test_manifest.py  test_nhanes_stroke_2017_2018.py  test_planner.py  test_readme_command_smoke.py  test_registry.py  test_router.py  test_secret_scan.py  test_seer_adapter.py  test_seer_metadata_feasibility.py  test_statistics.py  test_telemetry.py  test_version_consistency.py
(+48 files in other folders)
