[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosurg-epi-agent"
version = "0.2.0"
description = "Reproducible neurosurgical epidemiology planning for public clinical databases (NHANES-first MVP)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NeuroSurgEpiAgent contributors" }]
keywords = ["nhanes", "epidemiology", "neurosurgery", "reproducibility", "survey-design"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
case-study = ["pandas>=2.0"]
dev = ["pytest>=7", "pandas>=2.0"]
multidb = ["pandas>=2.0"]

[project.scripts]
neurosurg-epi = "neurosurg_epi_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
