[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosurg-epi-agent"
# `version` is intentionally omitted here: it is read dynamically from
# `neurosurg_epi_agent.__version__` (single source of truth) via
# [tool.setuptools.dynamic] below. Bump the literal in src/neurosurg_epi_agent/__init__.py.
dynamic = ["version"]
description = "Reproducible neurosurgical epidemiology planning for public clinical databases (NHANES-first MVP)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "NeuroSurgEpiAgent contributors" }]
keywords = ["nhanes", "epidemiology", "neurosurgery", "reproducibility", "survey-design"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
case-study = ["pandas>=2.0"]
dev = ["pytest>=7", "pandas>=2.0"]
multidb = ["pandas>=2.0"]

[project.scripts]
neurosurg-epi = "neurosurg_epi_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# Single source of truth: the release version literal lives in
# src/neurosurg_epi_agent/__init__.py and is read here at build time.
version = { attr = "neurosurg_epi_agent.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
